--- a/compose.yaml
+++ b/compose.yaml
@@ -28,24 +28,24 @@ services:
     user: postgres
 #    secrets:
 #     - db-password
-#    volumes:
-#      - db-data:/var/lib/postgresql/data
+    volumes:
+      - db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=tacs
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 #      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
 #    expose:
 #      - 5432
     ports:
-      - 5432
+      - 5433:5432
     healthcheck:
        test: [ "CMD", "pg_isready" ]
        interval: 10s
        timeout: 5s
        retries: 5
-# volumes:
-#   db-data:
+volumes:
+  db-data:
 # secrets:
 #   db-password:
 #     file: db/password.txt
