--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: tacs-grupo2-api
   datasource:
     url: jdbc:postgresql://db/tacs
-    username: ${POSTGRES_USER}
+    username: postgres
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
@@ -19,8 +19,11 @@ spring:
       key: ${JWT_SECRET_KEY}
       time:
         expiration: ${JWT_EXPIRATION_TIME}
+  flyway:
+    user: postgres
+    password: ${POSTGRES_PASSWORD}
 server:
-  port: 8000
+  port: 8080
 logging:
   level:
     root: INFO
