--- a/compose.yaml
+++ b/compose.yaml
@@ -43,8 +43,21 @@ services:
       - "3000:3000"
     depends_on:
       - server
+  redis:
+    image: redis/redis-stack:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}  # Set your Redis password here
+    #command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}", "--loadmodule", "/opt/redis-stack/lib/redistimeseries.so"]
+    volumes:
+      - redis-data:/data
 volumes:
   db-data:
+  redis-data:
+    driver: local
 secrets:
   db-password:
     file: secrets/db-password.txt
