--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -145,9 +145,9 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.lettuce</groupId>
-            <artifactId>lettuce-core</artifactId>
-            <version>6.0.2.RELEASE</version>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.4.1</version> <!-- Use the latest version available -->
         </dependency>
 
     </dependencies>
