--- a/compose.yaml
+++ b/compose.yaml
@@ -7,12 +7,15 @@ services:
       - 5005:5005
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - JWT_EXPIRATION_TIME=${JWT_EXPIRATION_TIME}
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - my-network
   db:
     image: postgres
     restart: always
@@ -33,6 +36,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - my-network
   frontend:
     container_name: back-for-frontend
     image: front-tptacs-img
@@ -43,17 +48,20 @@ services:
       - "3000:3000"
     depends_on:
       - server
+    networks:
+      - my-network
   redis:
     image: redis/redis-stack:latest
     container_name: redis
     ports:
       - "6379:6379"
     environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD}  # Set your Redis password here
-    #command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}", "--loadmodule", "/opt/redis-stack/lib/redistimeseries.so"]
     volumes:
       - redis-data:/data
+    networks:
+      - my-network
 volumes:
   db-data:
   redis-data:
@@ -61,3 +69,5 @@ volumes:
 secrets:
   db-password:
     file: secrets/db-password.txt
+networks:
+  my-network:
